Primer Commit 2da entrega pf

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="img/mariani_logo.jpg" />
   <title>Proyecto_SM</title>
+
+
+  <!--LINKK ARCHIVO CSS BOOTSTRAP local-->
+  <link rel="stylesheet" href="bootstrap_local/css/bootstrap.css" />
+
+  <!--LINKK ARCHIVO CSS Estilos propios desde Bootstrap-->
+  <link rel="stylesheet" href="bootstrap_local/estilos_bs.css">
+
   <!--LINK TIPOGRAFIAS TEXTOS-->
   <link rel="stylesheet" href="https://www.cssfontstack.com/Arial-Black" />
 
@@ -17,9 +25,6 @@
 
   <!--LINKK ARCHIVO CSS-->
   <link rel="stylesheet" href="css/estilo.css" />
-
-  <!--LINKK ARCHIVO CSS BOOTSTRAP local-->
-  <link rel="stylesheet" href="bootstrap_local/css/bootstrap.css" />
 </head>
 
 <body>
@@ -131,8 +136,8 @@
   </footer>
   <!--CIERRE FOOTER-->
 
-   <!--BOOTSTRAP JavaScript local-->
-   <script src="bootstrap_local/js/bootstrap.js"></script>
+  <!--BOOTSTRAP JavaScript local-->
+  <script src="bootstrap_local/js/bootstrap.js"></script>
 </body>
 
 </html>
