segundo commit 2da entrega pf

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -10,8 +10,8 @@
     <!--ESTILOS EXTERNOS DE CSS-->
     <link rel="stylesheet" href="../css/estilo.css">
 
-        <!--LINKK ARCHIVO CSS BOOTSTRAP local-->
-  <link rel="stylesheet" href="../bootstrap_local/css/bootstrap.css" />
+    <!--LINKK ARCHIVO CSS BOOTSTRAP local-->
+    <link rel="stylesheet" href="../bootstrap_local/css/bootstrap.css" />
 </head>
 
 <body>
@@ -64,8 +64,8 @@
                 ipsa
                 magnam!
             </p>
-            <div><img class="ImgHistoria" src="../img/mariani_historia1.jpg" alt="Que Hago?" width="50%"
-                    height="300"></div>
+            <div><img class="ImgHistoria" src="../img/mariani_historia1.jpg" alt="Que Hago?" width="50%" height="300">
+            </div>
 
             <h3>Presentación</h3>
             <!--VIDEO A MODO GRAFICO, PARA EL PRACTICO, EL CLIENTE TIENE QUE HACERLO-->
