--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/estilo.css">
 
     <!--LINKK ARCHIVO CSS BOOTSTRAP local-->
-  <link rel="stylesheet" href="../bootstrap_local/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap_local/css/bootstrap.css" />
 </head>
 
 <body>
@@ -56,8 +56,7 @@
                 maiores
                 ab.
             </p>
-            <div> <img src="../img/mariani_prensa_hidraulica_protot.png" alt="Prototipo" width="50%"
-                    height="300"></div>
+            <div> <img src="../img/mariani_prensa_hidraulica_protot.png" alt="Prototipo" width="50%" height="300"></div>
 
             <h3>Primer Prensa al mercado</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel cumque consequatur amet voluptate at fugit
@@ -104,8 +103,8 @@
     </footer>
     <!--CIERRE FOOTER-->
 
-           <!--BOOTSTRAP JavaScript local-->
-   <script src="../bootstrap_local/js/bootstrap.js"></script>
+    <!--BOOTSTRAP JavaScript local-->
+    <script src="../bootstrap_local/js/bootstrap.js"></script>
 </body>
 
 </html>
